--- a/app/src/main/res/layout/fragment_blank.xml
+++ b/app/src/main/res/layout/fragment_blank.xml
@@ -36,22 +36,28 @@
                 android:textSize="30dp"
                 android:textStyle="bold" />
 
-            <EditText
-                android:id="@+id/txtnombre"
+            <TextView
+                android:id="@+id/txtbusqueda"
                 style="@style/RegisterActivityText"
+                android:layout_marginTop="16dp"
                 android:drawableLeft="@drawable/ic_busqueda"
                 android:drawableTint="@color/colorLight"
-                android:hint="Destino"
-                android:textColorHint="@color/colorLight" />
+                android:textSize="15dp"
+                android:hint="Busqueda"
+                android:textAllCaps="true"
+                android:textStyle="bold" />
 
 
-            <EditText
+            <TextView
                 android:id="@+id/calendar"
                 style="@style/RegisterActivityText"
-                android:drawableLeft="@drawable/ic_calendar"
+                android:layout_marginTop="16dp"
+                android:drawableLeft="@drawable/ic_date"
                 android:drawableTint="@color/colorLight"
+                android:textSize="15dp"
                 android:hint="Fecha"
-                android:inputType="date" />
+                android:textAllCaps="true"
+                android:textStyle="bold" />
 
             <EditText
                 android:id="@+id/txthabitacion"
@@ -59,6 +65,7 @@
                 android:drawableLeft="@drawable/ic_person"
                 android:drawableTint="@color/colorLight"
                 android:hint="habitacion"
+                android:layout_marginTop="16dp"
                 android:inputType="text" />
 
             <Button
