--- a/app/src/main/res/layout/activity_checkout.xml
+++ b/app/src/main/res/layout/activity_checkout.xml
@@ -16,7 +16,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         card_view:cardCornerRadius="6dp"
-        card_view:cardBackgroundColor="@color/colorgray"
+        card_view:cardBackgroundColor="@color/cardview_shadow_start_color"
         card_view:cardElevation="10dp"
         card_view:cardPreventCornerOverlap="false"
         card_view:cardUseCompatPadding="true">
